# summer2025

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: app.cpp  app.h  main.cpp
src/draw/imgui_windows/: settings_window.cpp  settings_window.h  window_base.cpp  window_base.h  window_manager.h
